# ssh-bench

./: .gitignore  AGENTS.md  Cargo.toml
docs/superpowers/specs/: 2026-05-02-ssh-bench-design.md
src/: cli.rs  error.rs  lib.rs  main.rs  model.rs  report.rs  stats.rs  target.rs
src/bench/: auth.rs  command.rs  mod.rs  session.rs  throughput.rs
src/ssh/: auth.rs  client.rs  mod.rs  session.rs
tests/: cli_config.rs  report_render.rs  target_stats.rs
